Fix services overflow

--- a/src/app/all-services/all-services.component.scss
+++ b/src/app/all-services/all-services.component.scss
@@ -8,4 +8,5 @@
 
 :host {
 	padding-top: 2.5rem;
+	width: 100%;
 }
